--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Todo Goals App</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
 </head>
 <body>
     <div>
@@ -62,30 +63,35 @@
         }
     }
 
-    function createStore(reducer){
-        let state
-        let listeners = []
+    //Replacing our code with Redux code.
 
-        const getState = () => state
+    // function createStore(reducer){
+    //     let state
+    //     let listeners = []
+
+    //     const getState = () => state
         
-        const subscribe = (listener) => {
-            listeners.push(listener)
-            return () => listeners = listeners.filter( l => l != listener )
-        }
+    //     const subscribe = (listener) => {
+    //         listeners.push(listener)
+    //         return () => listeners = listeners.filter( l => l != listener )
+    //     }
 
-        const dispatch = (action) => { 
-            state = reducer(state, action)
-            listeners.forEach((listener) => listener()) 
-        }
+    //     const dispatch = (action) => { 
+    //         state = reducer(state, action)
+    //         listeners.forEach((listener) => listener()) 
+    //     }
 
-        return {
-            getState,
-            subscribe,
-            dispatch
-        }
-    }
+    //     return {
+    //         getState,
+    //         subscribe,
+    //         dispatch
+    //     }
+    // }
 
-    const store = createStore(app)
+    const store = Redux.createStore(Redux.combineReducers({
+        todos,
+        goals
+    }))
 
     store.subscribe( () => {
         console.log("The new state is", store.getState())
@@ -145,11 +151,11 @@
         goalListItem.appendChild(removeGoalButton)
     }
 
-    const unsubscribe = store.subscribe( setTimeout (() => {
-        console.log("The state is updated.....")
-    }, 100))
+    // const unsubscribe = store.subscribe( setTimeout (() => {
+    //     console.log("The state is updated.....")
+    // }, 100))
 
-    unsubscribe()
+    // unsubscribe()
 
     function todos(state = [], action){
         switch(action.type){
@@ -175,12 +181,14 @@
         }
     }
 
-    function app(state = {}, action){ 
-        return{
-            todos: todos(state.todos, action),
-            goals: goals(state.goals, action)
-        }
-    }
+    //Will be replaced by Redux combineReducers function.
+
+    // function app(state = {}, action){ 
+    //     return{
+    //         todos: todos(state.todos, action),
+    //         goals: goals(state.goals, action)
+    //     }
+    // }
 
     const addTodoButton = document.getElementById('todoBtn')
     const addGoalButton = document.getElementById('goalBtn')
